feat(EHMS): 发布1.3.0服务器联调版
